--- a/notebook_1.ipynb
+++ b/notebook_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZWfOtSosb9DclPc0TWRgg",
+      "authorship_tag": "ABX9TyPm9trDO0o8/rqzOzZ3E6JV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,55 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/JohnnyKozman2007/ds_Johnny_Kozman/blob/main/notebook_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "readme_content = \"\"\"\n",
+        "# Data Science Internship Assignment - Johnny Kozman\n",
+        "\n",
+        "## Project Overview\n",
+        "Analysis of the relationship between trader behavior and market sentiment using:\n",
+        "- Bitcoin Fear & Greed Index data\n",
+        "- Historical trader data from Hyperliquid\n",
+        "\n",
+        "## Files Structure\n",
+        "- `notebook_1.ipynb` - Complete analysis with EDA, visualizations, and Random Forest model\n",
+        "- `csv_files/` - Directory for data files\n",
+        "- `outputs/` - Contains all generated charts and visualizations\n",
+        "- `ds_report.pdf` - Summary report (to be downloaded separately)\n",
+        "\n",
+        "## Key Findings\n",
+        "- Identified correlation between market sentiment and trading profitability\n",
+        "- Built predictive model using Random Forest classification\n",
+        "- Provided actionable trading strategy recommendations\n",
+        "\n",
+        "## Setup\n",
+        "All analysis was conducted in Google Colab with Python 3.7+\n",
+        "\"\"\"\n",
+        "\n",
+        "with open('/content/drive/MyDrive/ds_johnny_kozman/README.md', 'w') as f:\n",
+        "    f.write(readme_content)\n",
+        "\n",
+        "print(\"README.md created successfully!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QXXoMY2dHHX6",
+        "outputId": "86d3efa6-fd07-4764-a6c9-c691651271ed"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "README.md created successfully!\n"
+          ]
+        }
       ]
     },
     {
